fix path import

--- a/notebooks/01-promises.ipynb
+++ b/notebooks/01-promises.ipynb
@@ -4,23 +4,14 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "5:20 - File '/Users/tiansivive/Workspace/fp-ts-tutorial/notebooks/lib/promise.ts' is not under 'rootDir' '/Users/tiansivive/Workspace/fp-ts-tutorial/notebooks/01-do_notation'. 'rootDir' is expected to contain all source files.\n",
-      "6:76 - File '/Users/tiansivive/Workspace/fp-ts-tutorial/notebooks/mocks/requests.ts' is not under 'rootDir' '/Users/tiansivive/Workspace/fp-ts-tutorial/notebooks/01-do_notation'. 'rootDir' is expected to contain all source files.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import * as E from \"fp-ts/Either\";\n",
     "import * as A from \"fp-ts/Array\";\n",
     "import * as F from \"fp-ts/function\";\n",
     "\n",
-    "import * as P from \"../lib/promise\";\n",
-    "import { request1, request2, request3, request4, request5, request6 } from '../mocks/requests'\n"
+    "import * as P from \"./lib/promise\";\n",
+    "import { request1, request2, request3, request4, request5, request6 } from './mocks/requests'\n"
    ]
   },
   {
@@ -32,9 +23,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "request1 arg: 0\n",
+      "request2 arg: 1\n",
+      "request3 arg: 2\n",
+      "request4 arg: 3\n",
+      "request5 arg: 4\n",
+      "request6 arg: 5\n",
+      "sequential: 6\n"
+     ]
+    }
+   ],
    "source": [
     "const sequential = request1(0)\n",
     "    .then(request2)\n",
@@ -56,9 +61,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "request1 arg: 0\n",
+      "request2 arg: { response1: 1 }\n",
+      "request3 arg: { response1: 1, response2: 2 }\n",
+      "request4 arg: { response1: 1, response2: 2, response3: 3 }\n",
+      "request5 arg: { response1: 1, response2: 2, response3: 3, response4: 4 }\n",
+      "nested: 5\n"
+     ]
+    }
+   ],
    "source": [
     "const nested = request1(0).then(response1 =>\n",
     "    request2({ response1 }).then(response2 =>\n",
@@ -88,18 +106,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1:24 - Cannot find name 'request1'.\n",
-      "2:24 - Cannot find name 'request2'.\n",
-      "3:24 - Cannot find name 'request3'.\n",
-      "4:24 - Cannot find name 'request4'.\n",
-      "5:24 - Cannot find name 'request5'.\n"
+      "request1 arg: 0\n",
+      "request2 arg: { awaited1: 1 }\n",
+      "request3 arg: { awaited1: 1, awaited2: 2 }\n",
+      "request4 arg: { awaited1: 1, awaited2: 2, awaited3: 3 }\n",
+      "request5 arg: { awaited1: 1, awaited2: 2, awaited3: 3, awaited4: 4 }\n",
+      "awaited: { awaited1: 1, awaited2: 2, awaited3: 3, awaited4: 4, awaited5: 5 }\n"
      ]
     }
    ],
@@ -127,9 +146,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "request1 arg: 0\n",
+      "request2 arg: { response1: 1 }\n",
+      "request3 arg: { response1: 1, response2: 2 }\n",
+      "request4 arg: { response1: 1, response2: 2, response3: 3 }\n",
+      "request5 arg: { response1: 1, response2: 2, response3: 3, response4: 4 }\n",
+      "piped {\n",
+      "  response1: 1,\n",
+      "  response2: 2,\n",
+      "  response3: 3,\n",
+      "  response4: 4,\n",
+      "  response5: 5\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "const piped = F.pipe(\n",
     "    P.Do,\n",
@@ -157,9 +195,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "request1 arg: 0\n",
+      "request2 arg: { response1: 1 }\n",
+      "request3 arg: { response1: 1, response2: 2 }\n",
+      "request4 arg: { response1: 1, response2: 2, response3: 3 }\n",
+      "request5 arg: { response1: 1, response2: 2, response3: 3, response4: 4 }\n",
+      "piped {\n",
+      "  response1: 1,\n",
+      "  response2: 2,\n",
+      "  response3: 3,\n",
+      "  response4: 4,\n",
+      "  response5: 5\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "const piped2 = F.pipe(\n",
     "    P.Do,\n",
