--- a/notebooks/02-do-notation.ipynb
+++ b/notebooks/02-do-notation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,20 +23,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "request1 arg: 0\n",
-      "request2 arg: 1\n",
-      "request3 arg: 2\n",
-      "request4 arg: 3\n",
-      "request5 arg: 4\n",
-      "request6 arg: 5\n",
-      "sequential: 6\n"
+      "request1 arg: \u001b[33m0\u001b[39m\n",
+      "request2 arg: \u001b[33m1\u001b[39m\n",
+      "request3 arg: \u001b[33m2\u001b[39m\n",
+      "request4 arg: \u001b[33m3\u001b[39m\n",
+      "request5 arg: \u001b[33m4\u001b[39m\n",
+      "request6 arg: \u001b[33m5\u001b[39m\n",
+      "sequential: \u001b[33m6\u001b[39m\n"
      ]
     }
    ],
@@ -52,7 +52,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -61,19 +60,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "request1 arg: 0\n",
-      "request2 arg: { response1: 1 }\n",
-      "request3 arg: { response1: 1, response2: 2 }\n",
-      "request4 arg: { response1: 1, response2: 2, response3: 3 }\n",
-      "request5 arg: { response1: 1, response2: 2, response3: 3, response4: 4 }\n",
-      "nested: 5\n"
+      "request1 arg: \u001b[33m0\u001b[39m\n",
+      "request2 arg: { response1: \u001b[33m1\u001b[39m }\n",
+      "request3 arg: { response1: \u001b[33m1\u001b[39m, response2: \u001b[33m2\u001b[39m }\n",
+      "request4 arg: { response1: \u001b[33m1\u001b[39m, response2: \u001b[33m2\u001b[39m, response3: \u001b[33m3\u001b[39m }\n",
+      "request5 arg: { response1: \u001b[33m1\u001b[39m, response2: \u001b[33m2\u001b[39m, response3: \u001b[33m3\u001b[39m, response4: \u001b[33m4\u001b[39m }\n",
+      "nested: \u001b[33m5\u001b[39m\n"
      ]
     }
    ],
@@ -92,7 +91,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -133,7 +131,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -186,7 +183,11 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -227,7 +228,8 @@
     "    P.bind(\"response5\", request5)\n",
     "  );\n",
     "  \n",
-    " console.log(\"piped\", await piped2);"
+    "console.log(\"piped\", await piped2);\n",
+    " \n"
    ]
   }
  ],
