--- a/notebooks/00-intro.ipynb
+++ b/notebooks/00-intro.ipynb
@@ -14,10 +14,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `Option`\n",
+    "### I like my `Option`\n",
     "\n",
     "This is the simplest data type and it provides a representation of an *optional value*   \n",
     "We define it as:\n"
@@ -39,19 +40,24 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use a `_tag` field to create a tagged union so we can narrow the types when needed. This is a common pattern we'll use for most data types.   \n"
+    "> **NOTE** \n",
+    "> \n",
+    "> We use a `_tag` field to create a tagged union so we can narrow the types when needed.  \n",
+    "> This is a common pattern we'll use for most data types.   \n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In TypeScript, we can usually defined a nullable or optional value with `A | undefined`. `Option` provides us with a different way to achieve the same functionality without ever having to deal with `undefined`.   \n",
-    "There are some interesting implications to this, for example:\n",
-    "\n"
+    "In TypeScript, we can usually defined a nullable or optional value with `A | undefined`.  \n",
+    "`Option` provides us with a different way to achieve the same functionality without ever having to deal with `undefined`.   \n",
+    "There are some interesting implications to this, for example:\n"
    ]
   },
   {
@@ -65,10 +71,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the first one, `two` not existing might have a different meaning than it being merely `undefined`, which can sometimes cause bugs. On the other hand, `Option` will always be defined, but it might represent the absence of a value in the `None` case. So if we wanted to distinguish between \"not existing\" and \"being undefined\" we'd have to model that in a more explicit way, which should help prevent any bugs.   \n",
+    "In the first one, `two` not existing might have a different meaning than it being merely `undefined`, which can sometimes cause bugs.  \n",
+    "On the other hand, `Option` will always be defined, but it might represent the absence of a value in the `None` case. So if we wanted to distinguish between \"not existing\" and \"being undefined\" we'd have to model that in a more explicit way, which should help prevent any bugs.   \n",
+    "\n",
     "Despite this, most TS code is prolific with nullable values using `undefined`, so we're probably better off sticking with the native solution. Which is why we have a custom data type `Nullable` for better interop with normal TS code.  \n",
     "We define it as:\n"
    ]
@@ -83,10 +92,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Nevertheless, `fp-ts`  will always use `Option`, so we either need to convert it to a `Nullable`, or just continue using it.   \n",
+    "\n",
+    "\n",
     "A fairly common example is wanting to modify a value only if it's not `undefined`, something like:"
    ]
   },
@@ -123,10 +135,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "const map = <A, B>(fa: Nullable<A>, f: (a:A) => B) => fa !== undefined ? f(fa) : undefined"
+    "const map = <A, B>(ma: Nullable<A>, f: (a:A) => B) => ma !== undefined ? f(ma) : undefined"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -136,8 +149,8 @@
     "> \n",
     "> When we typically want to denote a variable for a value of any simple type `A`, we call it `a` (or `b`, `c`, `d` and so on).   \n",
     "> Similarly, when referring to a function, we use `f`, `g`, `h` and so on.  \n",
-    "> More interestingly, when we refer to one of these \"enhanced\" values like `Nullable<A>`, we use `fa`, `fb`, `fc` and so on.   \n",
-    "> We'll cover why `f<x>` notation later, but it should at least be clear that `f` refers to the \"container\" and `a`, `b` etc, refer to the \"inner\" value   \n",
+    "> More interestingly, when we refer to one of these \"enhanced\" values like `Nullable<A>`, we use `ma`, `mb`, `mc` and so on.   \n",
+    "> We'll cover why `m<x>` notation later, but it should at least be clear that `m` refers to the \"container\" and `a`, `b` etc, refer to the \"inner\" value   \n",
     ">    "
    ]
   },
@@ -169,10 +182,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Tip:  \n",
+    "> **Tip**  \n",
     ">\n",
     "> just using `map` can be ambiguous. We would typically import it, so it's good practice to use a single letter to group together the fns from the same module:\n",
     ">\n"
@@ -220,10 +234,10 @@
     }
    ],
    "source": [
-    "const optMap = <A, B>(fa: O.Option<A>, f: (a: A) => B): O.Option<B> => fa._tag === \"None\" ? fa : { _tag: \"Some\", value: f(fa.value) }\n",
+    "const optMap = <A, B>(ma: O.Option<A>, f: (a: A) => B): O.Option<B> => ma._tag === \"None\" ? ma: { _tag: \"Some\", value: f(ma.value) }\n",
     "\n",
     "// or, using some utilities from `fp-ts`\n",
-    "const optMap_ = <A, B>(fa: O.Option<A>, f: (a: A) => B): O.Option<B> => O.isNone(fa) ? fa : O.of(f(fa.value))\n",
+    "const optMap_ = <A, B>(ma: O.Option<A>, f: (a: A) => B): O.Option<B> => O.isNone(ma) ? ma: O.of(f(ma.value))\n",
     "\n",
     "const optVal: O.Option<number> = O.some(1)\n",
     "const noVal: O.Option<number> = O.none\n",
@@ -235,12 +249,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Currying: What's all this fuss with `=>`\n",
+    "## Love me some curry\n",
     "\n",
-    "If you've checked the types for `O.map`, you might have noticed that it's slighty different than the implementation above. "
+    "If you've checked the types for `O.map`, you might have noticed that it's slightly different than the implementation above. "
    ]
   },
   {
@@ -249,7 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "type optionMap = <A, B>(f: (a: A) => B) => (fa: O.Option<A>) => O.Option<B>"
+    "type optionMap = <A, B>(f: (a: A) => B) => (ma: O.Option<A>) => O.Option<B>"
    ]
   },
   {
@@ -307,7 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## I Promise this won't hurt\n",
+    "## I `Promise` this won't hurt\n",
     "\n",
     "Typescript itself already provides one of these \"enhancing\" data types: `Promise`!\n",
     "\n",
@@ -363,7 +378,9 @@
     "## Power ups, please!\n",
     "\n",
     "\n",
-    "We've seen the basics of two different data types, and how we can work with them. We'll learn more about different data types soon, but for now, the most important thing to know is that we can work with them using the same patterns, like `map`, and that each data type will have different semantics and use cases. Here are the most common data types you might come across and some of their use cases. Don't worry if some use cases sound confusing, just be aware of what they're used for\n",
+    "We've seen the basics of two different data types, and how we can work with them.  \n",
+    "We'll learn more about different data types soon, but for now, the most important thing to know is that we can work with them using the same patterns, like `map`, and that each data type will have different semantics and use cases.  \n",
+    "Here are the most common data types you might come across and some of their use cases. Don't worry if some use cases sound confusing, just be aware of what they're used for  \n",
     "\n",
     "* *Option*: optional values, nullability\n",
     "* *Promise*: async behaviour\n",
@@ -372,7 +389,21 @@
     "* *Reader*: dependency injection, \"reading\" from an environment\n",
     "* *Writer*: logging\n",
     "* *IO*: read/write from stdin/console, localstorage, etc\n",
+    "\n",
+    "We will use `Either` and `Array` a lot more, so let's just add the types for those two `map`s as well\n",
     "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import * as E from 'fp-ts/Either'\n",
+    "\n",
+    "type MapArray = <A, B>(f: (a: A) => B) => (ma: Array<A>) => Array<B>\n",
+    "type EitherMap = <A,B>(f: (a: A) => B) => <E>(ma: E.Either<E, A>) => E.Either<E, B>"
    ]
   }
  ],
