--- a/notebooks/03-typeclasses.ipynb
+++ b/notebooks/03-typeclasses.ipynb
@@ -147,7 +147,7 @@
    "outputs": [],
    "source": [
     "//@ts-expect-error\n",
-    "const stringifyAndExclam: <F>(functor: Functor<F>) => <A>(fa: F<A>) => F<string> = functor => functor.map(e => JSON.stringify(e) + \"!\");"
+    "const stringifyAndExclam: <F>(functor: Functor<F>) => <A>(ma: F<A>) => F<string> = functor => functor.map(e => JSON.stringify(e) + \"!\");"
    ]
   },
   {
